ENT-11065: Remove the need for JVM flags in client code (#7635)