@@ -16,20 +16,3 @@ dependencies {
 
     runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
 }
-
-jar {
-    manifest {
-        attributes("Add-Opens":
-                "java.base/java.lang " +
-                        "java.base/java.lang.reflect " +
-                        "java.base/java.lang.invoke " +
-                        "java.base/java.util " +
-                        "java.base/java.time " +
-                        "java.base/java.io " +
-                        "java.base/java.net " +
-                        "java.base/javax.net.ssl " +
-                        "java.base/java.security.cert " +
-                        "java.base/java.nio"
-        )
-    }
-}
